syntax = "proto3";

package vega;
option go_package = "msg";

enum Side { Buy = 0; Sell = 1; }


// NEW = order received not processed
// ACTIVE = on order book but staying on for at least one transaction
// FILLED = traded completely (remaining = 0)
// CANCELLED = order cancelled because it was may have been killed (FOK),
//             eliminate (ENE), did not fully execute. external client request.
//             time limit reached (GTT) or removed by market action suspended/closed.

message Order {
    enum Type { GTC = 0; GTT = 1; ENE = 2; FOK = 3; }
    enum Status { NEW = 0; ACTIVE = 1; FILLED = 2; CANCELLED = 3; }
    string id = 1;
    string market = 2;
    string party = 3;
    Side side = 4;
    uint64 price = 5;
    uint64 size = 6;
    uint64 remaining = 7;
    Type type = 8;
    Status status = 9;
    uint64 timestamp = 10;
}

message TradeConfirmation {
    Order order = 1;
    repeated Trade trades = 2;
}

enum OrderError {
    NONE = 0;
    INVALID_MARKET_ID = 1;
    ORDER_OUT_OF_SEQUENCE = 2;
    INVALID_REMAINING_SIZE = 3;
    NON_EMPTY_NEW_ORDER_ID = 4;
}

message Trade {
    string id = 1;
    string market = 2;
    uint64 price = 3;
    uint64 size = 4;
    string buyer = 5;
    string seller = 6;
    Side aggressor = 7;
    uint64 timestamp = 8;
}

message TradeSet {
    repeated Trade trades = 1;
}

message MarketData {
    uint64 bestBid = 1;
    uint64 bestOffer = 2;
    uint64 lastTradedPrice = 3;
}

message MarketDepth {
    uint64 buyOrderCount = 1;
    uint64 sellOrderCount = 2;
    uint64 buyOrderVolume = 3;
    uint64 sellOrderVolume = 4;
    uint64 buyPriceLevels = 5;
    uint64 sellPriceLevels = 6;
}